--- a/src/CSS/styles.css
+++ b/src/CSS/styles.css
@@ -69,7 +69,7 @@
     grid-template: 1fr / 1fr 2fr;
     column-gap: 32px;
     align-content: center;
-    padding: 16px;
+    padding: 8px;
     background-color: rgba(0, 0, 0, 0.6);
 }
 .form-section {
@@ -77,13 +77,13 @@
     width: 100%;
     height: 100%;
     gap: 8px;
-    padding: 8px;
+    padding: 8px 0;
 }
 .form-section .city-display {
     position: relative;
     color:#BD4291;
-    font-size: 1.1rem;
-    font-weight: 300;
+    font-size: 1.2rem;
+    font-weight: 600;
     width: 100%;
     height: 32px;
     display: flex;
@@ -121,8 +121,8 @@
     width: 100%;
     height: 100%;
     display: grid;
-    grid-template: repeat(3, 1fr) / repeat(2, 1fr);
-    gap: 8px;
+    grid-template: repeat(4, 1fr) / repeat(2, 1fr);
+    gap: 4px;
     padding: 8px 0 8px 8px;
 }
 .info > div > div {
@@ -133,8 +133,8 @@
 .info  h3 {
     letter-spacing: 1.5px;
     color: #FFC54D;
-    font-weight: 600;
-    height: 32px;
+    font-weight: 500;
+    height: 24px;
 }
 .weather {
     grid-column: 1 / span 2;
@@ -152,8 +152,8 @@
 }
 .info h4 {
     letter-spacing: 2px;
-    font-weight: 500;
-    font-size: 1.3rem;
+    font-weight: 600;
+    font-size: 1.5rem;
     color: #F94c66;
     margin: 0 0 12px;
 }
@@ -162,7 +162,7 @@
 }
 .info p {
     font-family: 'Montserrat', sans-serif;
-    font-weight: 400;
+    font-weight: 500;
     color: #BD4291;
 }
 .temperature {
@@ -175,7 +175,10 @@
     flex-direction: column;
     justify-content:space-between;
 }
-
+.temperature h6 {
+    font-size: 0.8rem;
+    color: #005064;
+}
 .humidity .humidity-data {
     height: calc(100% - 32px);
 }
