--- a/src/CSS/styles.css
+++ b/src/CSS/styles.css
@@ -12,6 +12,7 @@
     height: auto;
     font-family: 'IBM Plex Sans', sans-serif;
     overflow: hidden;
+    padding: 16px;
 }
 .main .header {
     height: 4rem;
